updated env keys

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
-    // background: $wine;
-    background: url(/img/red-tablecloth.jpg);
+    background: steelblue;
+    //background: url(/img/red-tablecloth.jpg);
 }
 
 .header__content {
