--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,8 +3,11 @@
 // Colors
 $dark-grey: rgb(43, 43, 43);
 $grey: #666;
-$wine: #8b0505;
+$brand: #9e1010;
+$brand2: rgb(240, 208, 32);
+$brand3: rgb(255, 238, 6);
 $off-white: #f7f7f7;
+$off-white2: #eef2f8;
 // Font Size
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
