--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
-    background: steelblue;
-    //background: url(/img/red-tablecloth.jpg);
+    //background: steelblue;
+    background: url(/img/steel-blue-pat.png);
 }
 
 .header__content {
@@ -13,7 +13,7 @@
 .header__logo {
     color: white;
     text-decoration: none;
-    font-family: 'Krona One', sans-serif;
+    font-family: 'Play', sans-serif;
     font-size: .8em;
     text-shadow: 3px 3px rgba(25, 10, 235, .5);
     h1 {
