--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -25,7 +25,7 @@
     text-decoration: none;
     transition: background .3s ease;
     &:hover {
-        background: $off-white;
+        background: $off-white2;
     }
     @media (min-width: $desktop-breakpoint) {
         align-items: center;
