--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,14 +5,13 @@
   box-sizing: border-box;
 }
 
-
 html {
   font-size: 62.5%;
 }
 
 body {
-  color: $dark-grey;
-  font-family: Helvetica, Arial, sans-serif;
+  color: $brand3;
+  font-family: Roboto, sans-serif;
   font-size: $m-size;
 }
 
